# meson-fail-repro

./: .gitignore  Readme.md  meson.build
Subprojects/: protobuf.wrap
src/messages/: meson.build
src/messages/proto/: hello.proto
src/runtime/: meson.build
src/runtime/src/: main.cpp
